Added new pages and links

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 
 <body>
     <header>
-        <a href="#">Home</a>
+        <a href="index.html">Home</a>
+        <a href="pages/Menu.html">Menu</a>
+        <a href="pages/AboutUs.html">About Us</a>
+        <a href="https://restaurantguru.com/Savona-Pizzeria-Calgary/reviews?bylang=1">Reviews</a>
+        <a href="pages/AboutUs.html#contact">Contact Us</a>
+        <a href="pages/AboutUs.html#maps">Location</a>
     </header>
 
 
