--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Delicious, locally sourced, farm to table pizza in the heart of Okotoks.">
+    <meta name="keywords" content="pizza, delicious, okotoks, Restaurant, Modern">
+    <meta name="author" content="Okotoks Pizza">
+
+    <meta property='og:title' content="Okotoks Pizza">
+    <meta property='og:description' content="Delicious, locally sourced, farm to table pizza in the heart of Okotoks">
+    <meta property='og:image' content="../image/opplogo.png" alt="Logo of Okotoks Pizza">
+
+
+
     <title>Okotoks Pizza</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
