Added responsive media queries to style

--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Okotoks Pizza - About Us</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/menu.css">
 </head>
+
 <body>
-    <header>
-        <a href="../index.html">Home</a>
+    <header id="small-header">
+        <a href="../index.html"><img class="logo" src="../images/opplogo.png" alt="Okotoks Pizza Logo"></a>
         <a href="../pages/Menu.html">Menu</a>
         <a href="../pages/AboutUs.html">About Us</a>
         <a href="https://restaurantguru.com/Savona-Pizzeria-Calgary/reviews?bylang=1">Reviews</a>
@@ -17,6 +19,399 @@
         <a href="AboutUs.html#maps">Location</a>
     </header>
 
-<h1>This is the Menu page</h1>
+    <header id="big-header">
+        <div id="spacer"></div>
+        <a href="../index.html"><img class="logo" src="../images/opplogo.png" alt="Okotoks Pizza Logo"></a>
+        <nav>
+            <a href="../pages/Menu.html">Menu</a>
+            <a href="../pages/AboutUs.html">About Us</a>
+            <a href="https://restaurantguru.com/Savona-Pizzeria-Calgary/reviews?bylang=1">Reviews</a>
+            <a href="AboutUs.html#contact">Contact Us</a>
+            <a href="AboutUs.html#maps">Location</a>
+        </nav>
+    </header>
+
+    <div id="menu-container">
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/247' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/248' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/249' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/250' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/246' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/253' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/252' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/251' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/247' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/248' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/249' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/250' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/246' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/253' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/252' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/251' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/247' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/248' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/249' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/250' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/246' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/253' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/252' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/251' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/247' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/248' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/249' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/250' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/246' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/253' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/252' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+
+        </article>
+        <article class="menu-item">
+            <h1>Menu Item</h1>
+            <img src='http://placekitten.com/g/251' alt='random image' />
+            <p class="caption">this is a sample caption</p>
+            <h3>image sample title</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi commodi sint minima suscipit. Quis in
+                quasi
+                enim accusantium consectetur dolor omnis quod soluta facilis repellat. Labore cum adipisci voluptate
+                autem.
+            </p>
+        </article>
 </body>
+
 </html>
