--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -19,7 +19,7 @@
             <img id="menu-icon" src="../images/menu.png" alt="menu select icon">
             <input class="toggle" type="checkbox">
             <nav class="nav">
-                <a href="../pages/Menu.html">Menu</a>
+                <a href="#">Menu</a>
                 <a href="../pages/AboutUs.html">About Us</a>
                 <a href="https://restaurantguru.com/Savona-Pizzeria-Calgary/reviews?bylang=1">Reviews</a>
                 <a href="AboutUs.html#contact">Contact Us</a>
@@ -28,6 +28,8 @@
         </div>
 
     </header>
+
+    <a id="up" href="#header"><img src="../images/up-arrow-circle.png" alt="up arrow icon"></a>
 
     <h1 id="title">No cats were harmed in the making of this website!</h1>
 
