--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -6,19 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Okotoks Pizza - About Us</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/aboutus.css">
 </head>
 
 <body>
-    <header>
-        <a href="../index.html">Home</a>
-        <a href="../pages/Menu.html">Menu</a>
-        <a href="../pages/AboutUs.html">About Us</a>
-        <a href="https://restaurantguru.com/Savona-Pizzeria-Calgary/reviews?bylang=1">Reviews</a>
-        <a href="#contact">Contact Us</a>
-        <a href="#maps">Location</a>
+    <header id="header">
+        <div id="spacer"></div>
+        <a id="logo-container" href="../index.html"><img class="logo" src="../images/opplogo.png"
+                alt="Okotoks Pizza Logo"></a>
+        <div id="nav">
+            <img id="menu-icon" src="../images/menu.png" alt="menu select icon">
+            <input class="toggle" type="checkbox">
+            <nav class="nav">
+                <a href="../pages/Menu.html">Menu</a>
+                <a href="#">About Us</a>
+                <a href="https://restaurantguru.com/Savona-Pizzeria-Calgary/reviews?bylang=1">Reviews</a>
+                <a href="AboutUs.html#contact">Contact Us</a>
+                <a href="AboutUs.html#maps">Location</a>
+            </nav>
+        </div>
 
     </header>
+
+    <a id="up" href="#header"><img src="../images/up-arrow-circle.png" alt="up arrow icon"></a>
 
     <h1>About Us</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo in ducimus quasi, quod repellat qui nobis at?
@@ -65,7 +75,24 @@
     <h3>Where we are located</h3>
     <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1253.6626619876488!2d-114.06429776386348!3d51.065544368560914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5371651d74b117ad%3A0x57cb1e8bec746d21!2sSavona%E2%80%99s%20Pizza!5e0!3m2!1sen!2sca!4v1632279485017!5m2!1sen!2sca"
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" id="maps"></iframe>
+        allowfullscreen="" loading="lazy" id="maps"></iframe>
+
+    <h2>Why we are the best!</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet id minus cum molestias unde nostrum libero
+        asperiores dolore earum? Dolor sint alias harum corporis assumenda nemo dolorem mollitia iusto distinctio.
+        Non quaerat cum deserunt amet tenetur doloribus magni voluptatibus quibusdam? Quod molestiae ex vitae illum
+        reiciendis sit omnis tenetur inventore nemo velit? Nostrum eveniet adipisci, ex ipsam rerum explicabo tenetur.
+        Animi quisquam laudantium velit iusto eius dolor magnam, odit molestias eos ipsum unde, ea fuga repudiandae? Ea
+        dolore, nemo cupiditate recusandae consequuntur iure! Eaque suscipit odio, sit harum quidem libero.</p>
+
+    <h2>Who we are</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet id minus cum molestias unde nostrum libero
+        asperiores dolore earum? Dolor sint alias harum corporis assumenda nemo dolorem mollitia iusto distinctio.
+        Non quaerat cum deserunt amet tenetur doloribus magni voluptatibus quibusdam? Quod molestiae ex vitae illum
+        reiciendis sit omnis tenetur inventore nemo velit? Nostrum eveniet adipisci, ex ipsam rerum explicabo tenetur.
+        Animi quisquam laudantium velit iusto eius dolor magnam, odit molestias eos ipsum unde, ea fuga repudiandae? Ea
+        dolore, nemo cupiditate recusandae consequuntur iure! Eaque suscipit odio, sit harum quidem libero.</p>
+
 
 </body>
 
