finished with transitions on index[D[D[D[D[D[D[D[Dand styling on index

--- a/index.html
+++ b/index.html
@@ -31,22 +31,35 @@
             alt="neon eat sign with brick wall brackdrop">
     </div>
     <div class="body">
+
         <div>
             <img class="logo" src="images/opplogo.png" alt="Okotoks Pizza Logo">
-            <p>Open for dining and takeout</p>
-            <p>OPEN EVERYDAY OF THE WEEK</p>
+            <p>We are open for Indoor & Outdoor dining</p>
+            <p>Takeout & Delivery</p>
+            <p>HOURS OF OPERATIONS</p>
             <p>12pm - 10:30pm </p>
-            <a class="address" target="_blank"
-                href="https://www.google.com/maps/dir//savona+pizza/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x5371651d74b117ad:0x57cb1e8bec746d21?sa=X&ved=2ahUKEwjkjteegNjzAhU9JTQIHew5DLUQ9Rd6BAhyEAU">
-                <p class="address">1601c Centre St NW,</p>
-                <p class="address">Calgary, AB T2E 2S2</p>
+            <a class="address" href="#maps">
+                1601c Centre St NW
             </a>
             <nav>
-                <a href="pages/Menu.html">MENU</a>
+                <a href="pages/Menu.html">OUR MENU</a>
                 <a href="pages/AboutUs.html">ABOUT US</a>
             </nav>
         </div>
     </div>
+
+    <article id="maps">
+        <a id="close" href="#">x</a>
+        
+        <div class="map_container">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2507.2951197367242!2d-114.06497604939513!3d51.066101979464705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5371651d74b117ad%3A0x57cb1e8bec746d21!2sSavona%E2%80%99s%20Pizza!5e0!3m2!1sen!2sca!4v1635006715361!5m2!1sen!2sca"
+            style="border:0;" allowfullscreen="" loading="lazy">
+        </iframe>
+        
+    </div>
+    <a id="bg_close" href="#"></a>
+    </article>
 </body>
 
 </html>
