styled the close button on index

--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -42,10 +42,11 @@
         <div class="appetizer_container">
             <div class="food appetizer">
                 <h3>GARLIC BREAD & HOUSEMADE MARINARA</h3>
+                <div class="shell">
                 <img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/zeaxdpym/79e0f176-f12a-469a-b1cd-4a828302ad7d.jpg
            " alt="toasted garlic bread with a small bowl containing marinara sauce">
                 <p class="ingredients">olive oil, fresh garlic, butter, parmesan</p>
-                <h2 class="price">$5.75</h2>
+                <h2 class="price">$5.75</h2></div>
             </div>
 
             <div class="food appetizer">
