started putting content into the about us page[D[D[D[D[D[D[D[C[C[C[C[C[C[C

--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -30,70 +30,24 @@
 
     <a id="up" href="#header"><img src="../images/up-arrow-circle.png" alt="up arrow icon"></a>
 
-    <h1>About Us</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo in ducimus quasi, quod repellat qui nobis at?
-        Placeat consectetur voluptas similique eius accusantium, ipsa doloremque tempore saepe culpa illum quasi. Lorem
-        ipsum, dolor sit amet consectetur adipisicing elit. Sunt tenetur quis voluptatem nisi, magni unde repudiandae
-        culpa rem consequatur facere nostrum quia, error commodi hic! Repellat, commodi! Possimus, illum? Dicta.</p>
+    <main>
+        <div class="history_container">
+            <article>
+                <h3>History</h3>
+                <p>Ken and Elaine Spinato opened their first pizzeria after moving from Chicago to Phoenix with their
+                    infant daughter Nicole in 1974. Within a year, their son Anthony was born. Over the next 40 years,
+                    Spinato's grew through word-of-mouth thanks to our authentic Italian flavors and family atmosphere.
+                    Every guest was (and still is) treated like a member of the family, focusing on the guest to provide
+                    the food and the ambiance that inspired a family legacy.</p>
 
-    <h2>Why we are the best!</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet id minus cum molestias unde nostrum libero
-        asperiores dolore earum? Dolor sint alias harum corporis assumenda nemo dolorem mollitia iusto distinctio.
-        Non quaerat cum deserunt amet tenetur doloribus magni voluptatibus quibusdam? Quod molestiae ex vitae illum
-        reiciendis sit omnis tenetur inventore nemo velit? Nostrum eveniet adipisci, ex ipsam rerum explicabo tenetur.
-        Animi quisquam laudantium velit iusto eius dolor magnam, odit molestias eos ipsum unde, ea fuga repudiandae? Ea
-        dolore, nemo cupiditate recusandae consequuntur iure! Eaque suscipit odio, sit harum quidem libero.</p>
+                <img src="https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/b1ab8a73-ebac-41a8-bb7a-98c373235a4e.jpg"
+                    alt="Photo of Okotoks Pizza owner">
+            </article>
+            <img src="https://popmenucloud.com/cdn-cgi/image/width=1440,height=1440,fit=scale-down,format=auto,quality=60/zeaxdpym/bc3ce265-e604-4d5f-9aeb-c4aab7a32855.JPG"
+                alt="commercial dough mixer with dough inside">
+        </div>
 
-    <h2>Who we are</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet id minus cum molestias unde nostrum libero
-        asperiores dolore earum? Dolor sint alias harum corporis assumenda nemo dolorem mollitia iusto distinctio.
-        Non quaerat cum deserunt amet tenetur doloribus magni voluptatibus quibusdam? Quod molestiae ex vitae illum
-        reiciendis sit omnis tenetur inventore nemo velit? Nostrum eveniet adipisci, ex ipsam rerum explicabo tenetur.
-        Animi quisquam laudantium velit iusto eius dolor magnam, odit molestias eos ipsum unde, ea fuga repudiandae? Ea
-        dolore, nemo cupiditate recusandae consequuntur iure! Eaque suscipit odio, sit harum quidem libero.</p>
-
-    <h3 id="contact">Contact Us</h3>
-    <p>Phone:<a href="tel:4035555555">(403)555-5555</a></p>
-    <p>Email:<a href="mailto:info@okotokspizza.ca">info@okotokspizza.ca</a></p>
-
-    <h2>Why we need fillers</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet id minus cum molestias unde nostrum libero
-        asperiores dolore earum? Dolor sint alias harum corporis assumenda nemo dolorem mollitia iusto distinctio.
-        Non quaerat cum deserunt amet tenetur doloribus magni voluptatibus quibusdam? Quod molestiae ex vitae illum
-        reiciendis sit omnis tenetur inventore nemo velit? Nostrum eveniet adipisci, ex ipsam rerum explicabo tenetur.
-        Animi quisquam laudantium velit iusto eius dolor magnam, odit molestias eos ipsum unde, ea fuga repudiandae? Ea
-        dolore, nemo cupiditate recusandae consequuntur iure! Eaque suscipit odio, sit harum quidem libero.</p>
-
-    <h2>Are you actually reading this?</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet id minus cum molestias unde nostrum libero
-        asperiores dolore earum? Dolor sint alias harum corporis assumenda nemo dolorem mollitia iusto distinctio.
-        Non quaerat cum deserunt amet tenetur doloribus magni voluptatibus quibusdam? Quod molestiae ex vitae illum
-        reiciendis sit omnis tenetur inventore nemo velit? Nostrum eveniet adipisci, ex ipsam rerum explicabo tenetur.
-        Animi quisquam laudantium velit iusto eius dolor magnam, odit molestias eos ipsum unde, ea fuga repudiandae? Ea
-        dolore, nemo cupiditate recusandae consequuntur iure! Eaque suscipit odio, sit harum quidem libero.</p>
-
-    <h3>Where we are located</h3>
-    <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1253.6626619876488!2d-114.06429776386348!3d51.065544368560914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5371651d74b117ad%3A0x57cb1e8bec746d21!2sSavona%E2%80%99s%20Pizza!5e0!3m2!1sen!2sca!4v1632279485017!5m2!1sen!2sca"
-        allowfullscreen="" loading="lazy" id="maps"></iframe>
-
-    <h2>Why we are the best!</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet id minus cum molestias unde nostrum libero
-        asperiores dolore earum? Dolor sint alias harum corporis assumenda nemo dolorem mollitia iusto distinctio.
-        Non quaerat cum deserunt amet tenetur doloribus magni voluptatibus quibusdam? Quod molestiae ex vitae illum
-        reiciendis sit omnis tenetur inventore nemo velit? Nostrum eveniet adipisci, ex ipsam rerum explicabo tenetur.
-        Animi quisquam laudantium velit iusto eius dolor magnam, odit molestias eos ipsum unde, ea fuga repudiandae? Ea
-        dolore, nemo cupiditate recusandae consequuntur iure! Eaque suscipit odio, sit harum quidem libero.</p>
-
-    <h2>Who we are</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet id minus cum molestias unde nostrum libero
-        asperiores dolore earum? Dolor sint alias harum corporis assumenda nemo dolorem mollitia iusto distinctio.
-        Non quaerat cum deserunt amet tenetur doloribus magni voluptatibus quibusdam? Quod molestiae ex vitae illum
-        reiciendis sit omnis tenetur inventore nemo velit? Nostrum eveniet adipisci, ex ipsam rerum explicabo tenetur.
-        Animi quisquam laudantium velit iusto eius dolor magnam, odit molestias eos ipsum unde, ea fuga repudiandae? Ea
-        dolore, nemo cupiditate recusandae consequuntur iure! Eaque suscipit odio, sit harum quidem libero.</p>
-
-
+    </main>
 </body>
 
 </html>
